--- a/css/estilo.css
+++ b/css/estilo.css
@@ -93,6 +93,7 @@ html {
 
 .contenedor-header header nav ul li a:hover {
     color: var(--text-verde);
+    font-weight: bold;
     transform: scale(1.1);
 }
 
@@ -115,7 +116,7 @@ html {
 }
 
 .nav-responsive {
-    background-color: var(--bg-nav-responsive);
+    background-color: var(--first-color);
     color: var(--text-white);
     padding: 5px 10px;
     border-radius: 5px;
@@ -247,13 +248,8 @@ html {
 .sobremi {
     color: var(--text-white);
     text-shadow: var(--text-sombra);
-    padding: 50px 20px;
-    width: 75%;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 20px;
+    padding: 50px 20px;
 }
 
 .sobremi .contenido-seccion {
@@ -262,10 +258,9 @@ html {
 }
 
 .sobremi h2 {
-    font-size: 36px;
+    font-size: 48px;
     font-family: 'Righteous';
     text-align: center;
-    letter-spacing: 2px;
     padding: 20px 0;
 }
 
@@ -284,7 +279,6 @@ html {
 
 .sobremi .fila {
     display: flex;
-    margin-top: 2rem;
 }
 
 .sobremi .fila .col {
@@ -294,7 +288,6 @@ html {
 
 .sobremi .fila .col h3 {
     font-size: 28px;
-    letter-spacing: 2px;
     font-family: 'Righteous';
     margin-bottom: 25px;
 }
@@ -383,6 +376,224 @@ html {
 
 .sobremi button:hover .overlay {
     width: 100%;
+}
+
+
+/* SECCION SKILLS */
+
+.skills {
+    color: var(--text-white);
+    text-shadow: var(--text-sombra);
+    padding: 50px 20px;
+    margin-top: 4%;
+}
+
+.skills .contenido-seccion {
+    max-width: 1100px;
+    margin: auto;
+}
+
+.skills h2 {
+    font-size: 48px;
+    font-family: 'Righteous';
+    text-align: center;
+    padding: 20px 0;
+}
+
+.skills .fila {
+    display: flex;
+    margin-top: 2rem;
+}
+
+.skills .fila .col {
+    width: 50%;
+    padding: 0 20px;
+}
+
+.skills .fila .col h3 {
+    font-size: 28px;
+    font-family: 'Righteous';
+    margin-bottom: 25px;
+}
+
+.skills .skill>span {
+    color: var(--text-white);
+    font-weight: bold;
+    display: block;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
+.skills .skill .barra-skill {
+    height: 8px;
+    width: 80%;
+    background-color: var(--text-white);
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.skills .skill .progreso {
+    background-color: var(--first-color);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 8px;
+}
+
+.skills .skill .barra-skill span {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background-color: var(--first-color);
+    border-radius: 50px;
+    line-height: 40px;
+    text-align: center;
+    top: -17px;
+    right: -15px;
+    font-size: 14px;
+}
+
+
+/* Estas clases se agregaran dinamicamente mediante javascript */
+
+.skills .skill .javascript {
+    width: 0%;
+    animation: 2s javascript forwards;
+}
+
+@keyframes javascript {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 75%;
+    }
+}
+
+.skills .skill .htmlcss {
+    width: 0%;
+    animation: 2s htmlcss forwards;
+}
+
+@keyframes htmlcss {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 89%;
+    }
+}
+
+.skills .skill .photoshop {
+    width: 0%;
+    animation: 2s photoshop forwards;
+}
+
+@keyframes photoshop {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 95%;
+    }
+}
+
+.skills .skill .wordpress {
+    width: 0%;
+    animation: 2s wordpress forwards;
+}
+
+@keyframes wordpress {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 81%;
+    }
+}
+
+.skills .skill .drupal {
+    width: 0%;
+    animation: 2s drupal forwards;
+}
+
+@keyframes drupal {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 55%;
+    }
+}
+
+.skills .skill .comunicacion {
+    width: 0%;
+    animation: 2s comunicacion forwards;
+}
+
+@keyframes comunicacion {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 80%;
+    }
+}
+
+.skills .skill .trabajo {
+    width: 0%;
+    animation: 2s trabajo forwards;
+}
+
+@keyframes trabajo {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 70%;
+    }
+}
+
+.skills .skill .creatividad {
+    width: 0%;
+    animation: 2s creatividad forwards;
+}
+
+@keyframes creatividad {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 99%;
+    }
+}
+
+.skills .skill .dedicacion {
+    width: 0%;
+    animation: 2s dedicacion forwards;
+}
+
+@keyframes dedicacion {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 65%;
+    }
+}
+
+.skills .skill .proyect {
+    width: 0%;
+    animation: 2s proyect forwards;
+}
+
+@keyframes proyect {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 94%;
+    }
 }
 
 
@@ -782,4 +993,141 @@ a:hover {
     color: var(--first-color);
     display: inline-block;
     margin-right: 20px;
+}
+
+
+/* SECCION RESPONSIVE */
+
+@media screen and (max-width:980px) {
+    nav {
+        display: none;
+    }
+    .nav-responsive {
+        display: block;
+    }
+    nav.responsive {
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 75px;
+        background-color: #252A2E;
+        width: 180px;
+    }
+    nav.responsive ul {
+        display: block !important;
+    }
+    nav.responsive ul li {
+        border-bottom: 1px solid var(--text-white);
+        padding: 10px 0;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .sobremi .fila {
+        display: block;
+    }
+    .sobremi .fila .col {
+        width: fit-content;
+    }
+    .skills .fila {
+        display: block;
+    }
+    .skills .fila .col {
+        width: 100%;
+    }
+    .skills .fila .col .barra-skill {
+        width: 100%;
+    }
+    .curriculum .fila {
+        display: block;
+    }
+    .curriculum .fila .col {
+        width: 90%;
+    }
+    .curriculum .fila .derecha {
+        margin-left: 20px;
+    }
+    .portfolio .galeria {
+        display: block;
+        width: 100%;
+    }
+    .portfolio .galeria .proyecto {
+        max-width: 100%;
+    }
+    .portfolio .galeria .proyecto img {
+        width: 100%;
+    }
+    .contacto .fila {
+        display: block;
+    }
+    .contacto .fila .col {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 468px) {
+    .nav-responsive {
+        display: block;
+    }
+    .contenedor-principal {
+        display: block;
+        width: 100%;
+        /* Asegura que ocupe el ancho completo */
+    }
+    .inicio {
+        display: block;
+        text-align: center;
+        width: 100%;
+        height: 55%;
+        padding: 10px;
+        margin-top: 5rem;
+    }
+    .inicio .contenido-banner {
+        margin: 0 auto;
+        width: 90%;
+        text-align: center;
+    }
+    .inicio .contenido-banner img {
+        margin-top: 20px;
+        width: 80%;
+        height: 90%;
+    }
+    .inicio .contenido-banner h1 {
+        font-size: 36px;
+        margin-bottom: 1rem;
+    }
+    .inicio .contenido-banner h2 {
+        font-size: 19px;
+    }
+    .inicio .contenido-banner .redes a {
+        width: 35px;
+        height: 35px;
+        line-height: 35px;
+        font-size: 18px;
+    }
+    .sobremi {
+        margin-top: 5rem;
+    }
+    .portfolio .galeria {
+        display: flex;
+        flex-wrap: nowrap;
+        /* Evita que las imágenes se acomoden en varias filas */
+        justify-content: center;
+        /* Centra las imágenes en una sola fila */
+        gap: 10px;
+        /* Espacio entre las imágenes */
+    }
+    .portfolio .galeria .proyecto {
+        width: 80%;
+        /* Ajusta el tamaño de las imágenes para que encajen en la pantalla */
+        margin-bottom: 20px;
+        /* Añade espacio entre las filas si es necesario */
+    }
+    .portfolio .galeria .proyecto img {
+        width: 100%;
+        /* Asegura que la imagen ocupe todo el contenedor */
+        height: auto;
+        /* Mantiene la relación de aspecto */
+        border-radius: 5%;
+    }
 }
